<resources>
    <string name="app_name">Econ101Cards</string>

    <string name="title_menu">Econ 101 Exam Bank</string>
    <string name="menu_practice">Practice</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="nav_practice_menu">Main Menu</string>
    <string name="nav_practice_settings">Settings</string>
    <string name="nav_practice_bookmark">Bookmark</string>
    <string name="nav_practice_unbookmark">Unbookmark</string>
    <string name="nav_practice_select_question">Select Question</string>

    <string name="settings_rand_question_order">Random question order</string>
    <string name="settings_rand_option_order">Scramble options order</string>
    <string name="settings_clear_save">Clear saved data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
